examples/test/testpolicy7097.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7097
  namespace: namespace253
spec:
  podSelector:
    matchLabels:
      key25: value9
      key9: value17
      key49: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value29
          key41: value40
      podSelector:
        matchLabels:
          key15: value30
          key19: value12
